--- a/student_code/002_SplinedVoronoiPlanner/splined_voronoi_scripts/package.xml
+++ b/student_code/002_SplinedVoronoiPlanner/splined_voronoi_scripts/package.xml
@@ -16,5 +16,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <depend>move_base_flex</depend>
+  <depend>turtlebot3</depend>
   
 </package>
