add launch files and configs for mbf

--- a/student_code/002_SplinedVoronoiPlanner/splined_voronoi_scripts/package.xml
+++ b/student_code/002_SplinedVoronoiPlanner/splined_voronoi_scripts/package.xml
@@ -18,5 +18,7 @@
   <exec_depend>std_msgs</exec_depend>
   <depend>move_base_flex</depend>
   <depend>turtlebot3</depend>
+  <depend>turtlebot3_navigation</depend>
+  <depend>turtlebot3_description</depend>
   
 </package>
