--- a/student_code/003_RedundancyRes/optimization_algo/package.xml
+++ b/student_code/003_RedundancyRes/optimization_algo/package.xml
@@ -39,8 +39,14 @@
   <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend>
     <build_depend>eigen</build_depend>
+    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
+    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</buildtool_depend>
+    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</buildtool_depend>
+
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
     <build_export_depend>message_generation</build_export_depend>
+    <build_export_depend>urdfdom_py</build_export_depend>
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
@@ -57,6 +63,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>hrl_kdl</exec_depend>
+  <exec_depend>urdfdom_py</exec_depend>
+  <exec_depend>python3-pykdl</exec_depend>
 
   <depend>std_msgs</depend>
   <depend>controller_interface</depend>
