--- a/student_code/003_RedundancyRes/messungen/package.xml
+++ b/student_code/003_RedundancyRes/messungen/package.xml
@@ -56,6 +56,9 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
